syntax = "proto3";

package silenteight.datasource.api.gender.v1;

import "google/api/annotations.proto";

option java_package = "com.silenteight.datasource.api.gender.v1";
option java_outer_classname = "GenderProto";
option java_multiple_files = true;

service GenderInputService {
  rpc BatchGetMatchGenderInputs (BatchGetMatchGenderInputsRequest) returns (stream BatchGetMatchGenderInputsResponse) {
    option (google.api.http) = {
      post: "/agent-inputs/gender/versions/v1/matches:batchGet"
      body: "*"
    };
  }
}

message BatchGetMatchGenderInputsRequest {
  // The list of matches data is requested for, in form of `alerts/<Alert ID>/matches/<Match ID>`.
  repeated string matches = 1;
  // The list of features the input data for each match is requested, in form of `features/<Feature ID>`.
  repeated string features = 2;
}

message BatchGetMatchGenderInputsResponse {
  repeated GenderInput gender_inputs = 1;
}

message GenderInput {
  string match = 1;
  repeated GenderFeatureInput gender_feature_inputs = 2;
}

message GenderFeatureInput {
  string feature = 1;
  repeated string alerted_party_genders = 2;
  repeated string watchlist_genders = 3;
}
